womtool/src/test/resources/validate/wdl_draft3/invalid/extra_input/extra_input.wdl
version draft-3

workflow extra_input {
  meta {
    description: "This submission is invalid because it contains an additional input beyond the one expected"
  }
  input {
    Int x
  }
}
